--- a/src/Sulu/Bundle/MediaBundle/Resources/translations/sulu/backend.de.xlf
+++ b/src/Sulu/Bundle/MediaBundle/Resources/translations/sulu/backend.de.xlf
@@ -138,9 +138,9 @@
                 <source>sulu.collection.move.overlay-title</source>
                 <target>Kollektion verschieben</target>
             </trans-unit>
-            <trans-unit id="243d99ff2f64652633a5ca2169f22345" resname="media-selection.overlay.all-images">
-                <source>media-selection.overlay.all-images</source>
-                <target>Alle Bilder</target>
+            <trans-unit id="243d99ff2f64652633a5ca2169f22345" resname="media-selection.overlay.all-medias">
+                <source>media-selection.overlay.all-medias</source>
+                <target>Alle Medien</target>
             </trans-unit>
             <trans-unit id="243d99ff2f64652633a5ca2169f22261" resname="sulu.media.all">
                 <source>sulu.media.all</source>
